Changed file format and added sharing, but sharing currently doesn't work

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="title_activity_play_game">Map</string>
     <string name="title_activity_select_game">SelectGameActivity</string>
     <string name="title_activity_image_menu">ImageMenuActivity</string>
+    <string name="title_activity_share_game">ShareGameActivity</string>
 
 </resources>
